--- a/pages/view/order.html
+++ b/pages/view/order.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+ <meta charset="UTF-8">
+ <title>首页</title>
+ <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+ <meta name="apple-mobile-web-app-capable" content="yes">
+ <meta name="apple-mobile-web-app-status-bar-style" content="black">
+ <link rel="stylesheet" href="../common/css/bootstrap.min.css">
+ <!-- <link rel="stylesheet" href="../beiko/static/plugins/jqgrid/ui.jqgrid-bootstrap.css"> -->
+ <link rel="stylesheet" href="../beiko/static/css/font-awesome.min.css">
+<link rel="stylesheet" href="../beiko/static/plugins/jqgrid/ui.jqgrid-bootstrap.css">
+<link rel="stylesheet" href="../beiko/static/plugins/ztree/css/metroStyle/metroStyle.css">
+ <link rel="stylesheet" href="../common/css/style.css">
+</head>
 </head>
 <body>
-	order
+ 	<div class="panel panel-default">
+ 		<div class="panel-heading">产品管理</div>
+ 		<div class="panel-body">
+ 			
+ 			<table class="table table-bordered" id="table">
+ 				<!-- <thead> -->
+ 				<!-- </thead> -->
+ 			</table>
+ 			<div id="jqGridPager"></div>
+ 		</div>
+ 	</div>	
+
+
+
+	<!-- 	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<script src="../common/js/bootstrap.min.js"></script> -->
+  <script src="../common/js/vue.min.js"></script>
+  <script src="../beiko/static/libs/jquery.min.js"></script>
+  <!-- <script src="../beiko/static/plugins/jqgrid/jquery.jqGrid.min.js"></script> -->
+  <script src="../beiko/static/plugins/jqgrid/grid.locale-cn.js"></script>
+	<script src="../beiko/static/plugins/jqgrid/jquery.jqGrid.min.js"></script>
+	<script src="../beiko/static/plugins/ztree/jquery.ztree.all.min.js"></script>
+  <!-- <script src="../common/js/vue-resource.js"></script> -->
+  <script src="./js/order.js"></script>
+ 
 </body>
 </html>
