--- a/pages/common/css/style.css
+++ b/pages/common/css/style.css
@@ -12,3 +12,5 @@
 .col-padding-0 { padding-left: 0;padding-right: 0; }
 
 .bg-f5 { background-color: #f5f5f5; }
+
+iframe.col-md-12 { margin: 0;padding: 0;left: 0;border: none;height: 100%; }
